--- a/Project/style.css
+++ b/Project/style.css
@@ -1,4 +1,4 @@
-form {
+  form {
     
     width: 650px;
     margin-left: 400px;
@@ -14,15 +14,11 @@ form {
     box-sizing: border-box;
   }
 
-#info tr:nth-child(even){
-      background-color:#eeee;
-    }               
-
-    #info tr:nth-child(odd){
-      background-color:#3498db; 
+    #info tr{
+      background-color:#ffeeee; 
     }
     
-    #info th, #info td{
+    #info th{
       padding:10;
       text-align:center;
     }
